--- a/lib/needsharebutton/README.html
+++ b/lib/needsharebutton/README.html
@@ -300,7 +300,7 @@
     <img class="site-author-image" itemprop="image" alt="倪矗"
       src="/images/avatar.gif">
   <p class="site-author-name" itemprop="name">倪矗</p>
-  <div class="site-description" itemprop="description">每一个不曾起舞的日子，都是对生命的辜负。</div>
+  <div class="site-description" itemprop="description">每个不曾起舞的日子，都是对生命的辜负。</div>
 </div>
 <div class="site-state-wrap motion-element">
   <nav class="site-state">
