--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     var CONFIG = {"hostname":"haikezi.vicp.io","root":"/","scheme":"Gemini","version":"7.8.0","exturl":false,"sidebar":{"position":"left","display":"post","padding":18,"offset":12,"onmobile":false},"copycode":{"enable":true,"show_result":true,"style":null},"back2top":{"enable":true,"sidebar":true,"scrollpercent":true},"bookmark":{"enable":false,"color":"#222","save":"auto"},"fancybox":false,"mediumzoom":false,"lazyload":false,"pangu":false,"comments":{"style":"tabs","active":null,"storage":true,"lazyload":false,"nav":null},"algolia":{"hits":{"per_page":10},"labels":{"input_placeholder":"Search for Posts","hits_empty":"We didn't find any results for the search: ${query}","hits_stats":"${hits} results found in ${time} ms"}},"localsearch":{"enable":true,"trigger":"auto","top_n_per_article":-1,"unescape":false,"preload":false},"motion":{"enable":true,"async":false,"transition":{"post_block":"fadeIn","post_header":"slideDownIn","post_body":"slideDownIn","coll_header":"slideLeftIn","sidebar":"slideUpIn"}},"path":"./public/search.xml"};
   </script>
 
-  <meta name="description" content="每个不曾起舞的日子，都是对生命的辜负。">
+  <meta name="description" content="每一个不曾起舞的日子，都是对生命的辜负。">
 <meta property="og:type" content="website">
 <meta property="og:title" content="嗨客伊甸园">
 <meta property="og:url" content="http://haikezi.vicp.io/index.html">
 <meta property="og:site_name" content="嗨客伊甸园">
-<meta property="og:description" content="每个不曾起舞的日子，都是对生命的辜负。">
+<meta property="og:description" content="每一个不曾起舞的日子，都是对生命的辜负。">
 <meta property="og:locale" content="zh_CN">
 <meta property="article:author" content="倪矗">
 <meta name="twitter:card" content="summary">
@@ -194,7 +194,7 @@
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/images/avatar.gif">
       <meta itemprop="name" content="倪矗">
-      <meta itemprop="description" content="每个不曾起舞的日子，都是对生命的辜负。">
+      <meta itemprop="description" content="每一个不曾起舞的日子，都是对生命的辜负。">
     </span>
 
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
@@ -285,7 +285,7 @@
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/images/avatar.gif">
       <meta itemprop="name" content="倪矗">
-      <meta itemprop="description" content="每个不曾起舞的日子，都是对生命的辜负。">
+      <meta itemprop="description" content="每一个不曾起舞的日子，都是对生命的辜负。">
     </span>
 
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
@@ -376,7 +376,7 @@
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/images/avatar.gif">
       <meta itemprop="name" content="倪矗">
-      <meta itemprop="description" content="每个不曾起舞的日子，都是对生命的辜负。">
+      <meta itemprop="description" content="每一个不曾起舞的日子，都是对生命的辜负。">
     </span>
 
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
@@ -468,7 +468,7 @@
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/images/avatar.gif">
       <meta itemprop="name" content="倪矗">
-      <meta itemprop="description" content="每个不曾起舞的日子，都是对生命的辜负。">
+      <meta itemprop="description" content="每一个不曾起舞的日子，都是对生命的辜负。">
     </span>
 
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
@@ -560,7 +560,7 @@
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/images/avatar.gif">
       <meta itemprop="name" content="倪矗">
-      <meta itemprop="description" content="每个不曾起舞的日子，都是对生命的辜负。">
+      <meta itemprop="description" content="每一个不曾起舞的日子，都是对生命的辜负。">
     </span>
 
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
@@ -654,7 +654,7 @@
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/images/avatar.gif">
       <meta itemprop="name" content="倪矗">
-      <meta itemprop="description" content="每个不曾起舞的日子，都是对生命的辜负。">
+      <meta itemprop="description" content="每一个不曾起舞的日子，都是对生命的辜负。">
     </span>
 
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
@@ -736,7 +736,7 @@
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/images/avatar.gif">
       <meta itemprop="name" content="倪矗">
-      <meta itemprop="description" content="每个不曾起舞的日子，都是对生命的辜负。">
+      <meta itemprop="description" content="每一个不曾起舞的日子，都是对生命的辜负。">
     </span>
 
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
@@ -827,7 +827,7 @@
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="image" content="/images/avatar.gif">
       <meta itemprop="name" content="倪矗">
-      <meta itemprop="description" content="每个不曾起舞的日子，都是对生命的辜负。">
+      <meta itemprop="description" content="每一个不曾起舞的日子，都是对生命的辜负。">
     </span>
 
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
@@ -993,7 +993,7 @@
     <img class="site-author-image" itemprop="image" alt="倪矗"
       src="/images/avatar.gif">
   <p class="site-author-name" itemprop="name">倪矗</p>
-  <div class="site-description" itemprop="description">每个不曾起舞的日子，都是对生命的辜负。</div>
+  <div class="site-description" itemprop="description">每一个不曾起舞的日子，都是对生命的辜负。</div>
 </div>
 <div class="site-state-wrap motion-element">
   <nav class="site-state">
